--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -4,11 +4,9 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "catalog.api": "StartDebugging",
-        "basket.api": "StartDebugging",
-        "discount.api": "StartDebugging",
-        "discount.grpc": "StartDebugging",
-        "ordering.api": "StartDebugging"
+        "companyandemployee.api": "StartDebugging",
+        "footballleagueandclubs.api": "StartDebugging",
+        "footballteamsandplayers.api": "StartDebugging"
       }
     }
   }
