--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,40 +1,38 @@
 version: '3.4'
 
 services:
-  catalogdb:
-    container_name: catalogdb
-    restart: always
-    ports:
-      - "27017:27017"
-    volumes:
-    - mongo_data:/data/db
-
-  basketdb:
-    container_name: basketdb
-    restart: always
-    ports:
-      - "6379:6379"
- 
-  discountdb:
-    container_name: discountdb
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin1234
-      - POSTGRES_DB=DiscountDb
-    restart: always
-    ports:
-        - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-
-  orderdb:
-    container_name: orderdb
+  companyandemployeedb:
+    container_name: companyandemployeedb
     environment:
         SA_PASSWORD: "sabbir123"
         ACCEPT_EULA: "Y"
     restart: always
     ports:
         - "1433:1433"
+ 
+  footballteamsandplayersdb:
+    container_name: footballteamsandplayersdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=29022004bd
+      - POSTGRES_DB=Football
+    restart: always
+    ports:
+        - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+
+  footballleagueandclubsdb:
+    container_name: footballleagueandclubsdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=29022004bd
+      - POSTGRES_DB=FootballLeaguesAndClubs
+    restart: always
+    ports:
+        - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
 
   rabbitmq:
@@ -45,60 +43,38 @@ services:
       - "15672:15672"
 
 
-  catalog.api:
-    container_name: catalog.api
+  companyandemployee.api:
+    container_name: companyandemployee.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=sabbir123"
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672" 
     depends_on:
-      - catalogdb
+      - companyandemployeedb
     ports:
       - "8000:80"
 
-  basket.api:
-    container_name: basket.api
+  footballteamsandplayers.api:
+    container_name: footballteamsandplayers.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "CacheSettings:ConnectionString=basketdb:6379"
-      - "GrpcSettings:DiscountUrl=discount.grpc"
-      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+      - "DatabaseSettings: ConnectionString=Host=localhost;Port=5432;Database=Football;Username=postgres;Password=29022004bd;"
     depends_on:
-      - basketdb
-      - rabbitmq
+      - footballteamsandplayersdb
     ports:
       - "8001:80"
 
-  discount.api:
-    container_name: discount.api
+  footballleagueandclubs.api:
+    container_name: footballleagueandclubs.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+      - "DatabaseSettings: ConnectionString=Host=localhost;Port=5432;Database=FootballLeaguesAndClubs;Username=postgres;Password=29022004bd;"
     depends_on:
-      - discountdb
+      - footballleagueandclubsdb
     ports:
       - "8002:80"
 
-  discount.grpc:
-    container_name: discount.grpc
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
-    depends_on:
-      - discountdb
-    ports:
-      - "8003:80"
 
-  ordering.api:
-    container_name: ordering.api
-    environment:
-        - ASPNETCORE_ENVIRONMENT=Development
-        - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=sabbir123"
-        - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672" 
-    depends_on:
-        - orderdb
-        - rabbitmq
-    ports:
-        - "8004:80"
 
   pgadmin:
     container_name: pgadmin
@@ -120,4 +96,3 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
-
